src/test/ui/rfc-2632-const-trait-impl/const_derives/derive-const-non-const-type.stderr
error[E0015]: cannot call non-const fn `<A as Default>::default` in constant functions
  --> $DIR/derive-const-non-const-type.rs:10:14
   |
LL | #[derive_const(Default)]
   |                ------- in this derive macro expansion
LL | pub struct S(A);
   |              ^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
